--- a/RecipeAppMVVM/app/src/main/res/layout/activity_main.xml
+++ b/RecipeAppMVVM/app/src/main/res/layout/activity_main.xml
@@ -20,8 +20,7 @@
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FF80B8"
-        app:layout_constraintHeight_percent="0.1"
+        android:background="#FB8C8C"
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
         app:layout_constraintEnd_toEndOf="parent"
