--- a/RecipeAppMVVM/app/src/main/res/layout/fragment_home.xml
+++ b/RecipeAppMVVM/app/src/main/res/layout/fragment_home.xml
@@ -18,6 +18,19 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/sentence_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="'Life is too short to eat boring food'"
+        android:textColor="#579EEF"
+        android:textStyle="bold|italic"
+        android:textSize="32dp"
+        android:layout_margin="8dp"
+        android:paddingTop="8dp"
+        />
+
+
+    <TextView
         android:id="@+id/kitchens_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,7 +39,7 @@
         android:textColor="@color/black"
         android:textStyle="bold"
         android:layout_margin="8dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sentence_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
