--- a/RecipeAppMVVM/app/src/main/res/layout/tags_item_row.xml
+++ b/RecipeAppMVVM/app/src/main/res/layout/tags_item_row.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="16dp"
-    android:backgroundTint="#FB8C8C">
+    android:orientation="horizontal"
+    android:layout_marginEnd="8dp"
+    >
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="16dp"
+        android:backgroundTint="#FB8C8C">
 
     <TextView
         android:id="@+id/tag_name_text"
@@ -16,5 +23,7 @@
         android:textSize="16sp"
         android:padding="12dp"
         />
+    </androidx.cardview.widget.CardView>
 
-</androidx.cardview.widget.CardView>
+
+</LinearLayout>
