--- a/RecipeAppMVVM/app/src/main/res/layout/recipe_item_row.xml
+++ b/RecipeAppMVVM/app/src/main/res/layout/recipe_item_row.xml
@@ -6,6 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:backgroundTint="#E1BCF8"
     android:layout_marginBottom="16dp"
+    android:layout_marginEnd="8dp"
     app:cardCornerRadius="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,18 +16,17 @@
         <ImageView
             android:id="@+id/recipe_image"
             android:layout_width="wrap_content"
-            android:layout_height="150dp"
-            android:src="@drawable/ic_launcher_background"
+            android:layout_height="125dp"
             android:layout_margin="8dp"
+            android:src="@drawable/ic_launcher_background"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/heart_icon"
-            android:paddingTop="8dp"
-            android:paddingEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,20 +37,21 @@
             android:layout_margin="8dp"
             android:text="Recipe Name"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@id/recipe_image"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/recipe_image" />
 
 
         <TextView
             android:id="@+id/recipe_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Very long description"
             android:layout_margin="8dp"
             android:paddingBottom="8dp"
-            app:layout_constraintEnd_toStartOf="@id/recipe_image"
+            android:text="Very long description"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/recipe_name" />
 
