--- a/RecipeAppMVVM/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/RecipeAppMVVM/app/src/main/res/layout/activity_recipe_detail.xml
@@ -21,21 +21,41 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-    <ImageView
-        android:id="@+id/d_product_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="16dp"
+            app:cardElevation="4dp"
+            android:background="@drawable/rounded_grey_background"
+            >
 
-    <TextView
-        android:id="@+id/recipe_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/detail_name"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/d_product_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="fitCenter"
+                app:srcCompat="@drawable/ic_launcher_background" />
+
+            <ImageView
+                android:id="@+id/arrow_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/baseline_arrow_back_24"
+                android:padding="8dp"
+                android:background="@drawable/rounded_purple_background"
+                />
+
+
+        </androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/recipe_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="10dp"
+            android:text="@string/detail_name"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
     <RelativeLayout
         android:id="@+id/rate_cuisine_layout"
