--- a/RecipeAppMVVM/app/src/main/res/values/colors.xml
+++ b/RecipeAppMVVM/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="orange">#FFFF7043</color>
+    <color name="red">#C62828</color>
 </resources>
